# custom-string-serde

./: Cargo.toml
src/: lib.rs
tests/: construct_test.rs  serde_test.rs  size_test.rs  test.rs
